--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUnusedLocals": true,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
     "paths": {
       "@/*": ["./src/*"]
     }
